# aido-telemetry

./: Dockerfile  README.md  docker-compose.yml
aido_telemetry/: CMakeLists.txt  package.xml
aido_telemetry/aido_telemetry/: publisher.py  service.py  subscriber.py
aido_telemetry/docs/: qos-notes.md
aido_telemetry/msg/: TelemetryMsg.msg
aido_telemetry/srv/: SetPatrolSpeed.srv
